# opengithub

./: .env.example  .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PRODUCTION-HARDEN-LOOP.md  README.md  build-progress.txt  build-spec.md  docker-compose.dev.yml  docs-extract.md  inspect-progress.txt  opengithub.tour.json  package.json  prd.json  qa-hints.json  ralph-config.json  sitemap.md  tsconfig.json  vitest.config.ts
.clawhip/state/: prompt-submit.json
.qrspi/api-001/: structure.md
.qrspi/auth-001/: structure.md
.qrspi/auth-002/: structure.md
.qrspi/dashboard-001/: structure.md
.qrspi/dashboard-003/: structure.md
.qrspi/git-001/: structure.md
.qrspi/infra-001/: structure.md
.qrspi/issues-001/: structure.md
.qrspi/issues-002/: structure.md
.qrspi/issues-003/: structure.md
.qrspi/issues-004/: structure.md
.qrspi/layout-001/: structure.md
.qrspi/nav-001/: structure.md
.qrspi/onboarding-001/: structure.md
.qrspi/prs-001/: structure.md
.scratch/: api-contract-hardening-scenario.sh
design/: README.md
ralph/: architecture-decisions.json  architecture-prompt.md  audit-spec.md  build-prompt.md  build-ralph.sh  cost-log.json  failure-log.json  final-status.json  inspect-prompt.md  inspect-ralph.sh  pre-setup.md  production-checklist.json  ralph-watchdog.sh
schemas/: ralph-config.schema.json
scripts/: scrape-github-docs.py
target-docs/: auth-flow.md  onboarding-flow.md
web/: AGENTS.md  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+382 files in other folders)
